<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelloActivity">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="284dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/etName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:autofillHints="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_pronoun_would_you_like_to_use" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <RadioGroup
                android:id="@+id/rgPronouns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbShe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/she" />

                <RadioButton
                    android:id="@+id/rbHe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/he" />

                <RadioButton
                    android:id="@+id/rbNI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rather_not_answer" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#673AB7"
                android:text="@string/finish"
                android:textColor="#FFFFFF" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>